# EmailBot

./: .env.example  .gitignore  LICENSE  README.md  emailExtractor.py  fileHandler.py  logger.py  main.py  pdfScraper.py  pyproject.toml  timelog.txt
EmailBot/: PostFile.bru  bruno.json
emailBot/projectcode/: accesstimeLogger.py  logger.py  main.py  pdfScraper.py
emailbot/code/: accesstimeLogger.py  emailBot.py  emailExtractor.py  fileHandler.py  main.py  ui.py
logs/: log.txt
