[tool.poetry]
name = "emailbot"
version = "0.1.0"
description = ""
authors = ["Lukas <lburg5534@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pdfplumber = "^0.11.1"
pyppeteer = "^2.0.0"
requests = "^2.32.3"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
